# catan

./: .gitignore  README.md  catan.cabal  stack.yaml
bench/: BenchmarkSuite.hs
game/: Main.hs
src/: Catan.hs
src/Catan/: Build.hs  Common.hs  Draw.hs  Internal.hs  Logic.hs  MoveRobber.hs  Resource.hs  SDL.hs  Settlement.hs  Trade.hs  Types.hs
src/Catan/Internal/: Board.hs  Logic.hs  Resource.hs  Settlement.hs
src/Catan/SDL/: Basic.hs  Enum.hs
test/: Spec.hs
