name:                   catan
version:                0.1.0.0
synopsis:               An implementation of Settlers of Catan in Haskell
description:            Please see README.md
homepage:               https://github.com/oldmanmike/catan
bug-reports:            https://github.com/oldmanmike/catan/issues
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2015 Michael Carpenter
category:               Game
build-type:             Simple
extra-source-files:     LICENSE, README.md
cabal-version:          >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Catan
                        Catan.Build
                        Catan.Draw
                        Catan.Internal
                        Catan.Internal.Board
                        Catan.Internal.Logic
                        Catan.Internal.Resource
                        Catan.Internal.Settlement
                        Catan.MoveRobber
                        Catan.Trade
                        Catan.Types
    build-depends:      base >= 4.7 && < 5,
                        containers,
                        mtl,
                        lens,
                        linear,
                        random,
                        sdl2,
                        vector
    default-language:   Haskell2010

executable catan
    hs-source-dirs:     game
    main-is:            Main.hs
    ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N -fllvm -fforce-recomp -fprof-auto
    build-depends:      base,
                        catan,
                        linear,
                        random,
                        random-shuffle,
                        sdl2,
                        vector
    default-language:   Haskell2010

test-suite catan-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:      base,
                        catan,
                        hspec,
                        QuickCheck
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

benchmark catan-bench
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src, bench
    other-modules:      Catan
                        Catan.Internal.Logic
    main-is:            BenchmarkSuite.hs
    build-depends:      base,
                        containers,
                        criterion,
                        random,
                        random-shuffle,
                        statistics
    ghc-options:        -Wall
                        -O2
    default-language:   Haskell2010

source-repository head
    type:     git
    location: https://github.com/githubuser/catan
